--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ body {
   justify-content: center;
   font-size: 64px;
   margin: 5px 0 10px 0;
+  text-align: center;
 }
 
 .gameStatusMessage {
@@ -25,6 +26,8 @@ body {
   font-size: 24px;
   justify-content: center;
   margin: 10px;
+  height: 48px;
+  text-align: center;
 }
 
 .suitCSS {
@@ -40,7 +43,7 @@ body {
 }
 
 .cardCSS {
-  margin: 10px;
+  margin: 10px 10px 0 10px;
   padding: 10px;
   background-color: white;
   width: 50px;
@@ -52,7 +55,9 @@ body {
 .holdIndicator {
   display: flex;
   text-align: center;
+  vertical-align: super;
   justify-content: center;
+  font-size: 20px;
   height: 32px;
 }
 
@@ -67,7 +72,7 @@ body {
   width: 70px;
   border: 1px dashed white;
   height: 89px;
-  margin: 9px 9px 41px 9px;
+  margin: 10px 10px 30px 10px;
   border-radius: 8px;
   display: flex;
   flex-wrap: wrap;
@@ -82,6 +87,7 @@ body {
   width: 70%;
   margin: auto;
   border-radius: 3px;
+  margin-bottom: 75px;
 }
 
 .red {
@@ -100,41 +106,41 @@ body {
   display: flex;
   justify-content: center;
   font-size: 20px;
+  width: 100%;
   font-weight: bold;
+  margin-bottom: 20px;
 }
 
 .playerBtn {
   display: inline-block;
-  border: 2px solid gold;
-  background-color: maroon;
+
   color: white;
   border-radius: 8px;
   font-size: 18px;
-  width: 120px;
+  width: 150px;
   height: 36px;
   font-family: "Lato", sans-serif;
-  font-style: italic;
-  background: -moz-linear-gradient(top, #ff3019 0%, #cf0404 100%); /* FF3.6+ */
+  background: -moz-linear-gradient(top, #ff3019 0%, #d40000 100%); /* FF3.6+ */
   background: -webkit-gradient(
     linear,
     left top,
     left bottom,
     color-stop(0%, #e01238),
-    color-stop(100%, #8f011b)
+    color-stop(100%, #d40000)
   ); /* Chrome,Safari4+ */
   background: -webkit-linear-gradient(
     top,
     #e01238 0%,
-    #8f011b 100%
+    #d40000 100%
   ); /* Chrome10+,Safari5.1+ */
   background: -o-linear-gradient(
     top,
     #e01238 0%,
-    #8f011b 100%
+    #d40000 100%
   ); /* Opera 11.10+ */
-  background: -ms-linear-gradient(top, #e01238 0%, #8f011b 100%); /* IE10+ */
-  background: linear-gradient(top, #e01238 0%, #8f011b 100%); /* W3C */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e01238', endColorstr='#8F011B',GradientType=0 ); /* IE6-9 */
+  background: -ms-linear-gradient(top, #e01238 0%, #d40000 100%); /* IE10+ */
+  background: linear-gradient(top, #e01238 0%, #d40000 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e01238', endColorstr='#d40000',GradientType=0 ); /* IE6-9 */
   -webkit-transition: all 0.3s linear;
   -khtml-transition: all 0.3s linear;
   -moz-transition: all 0.3s linear;
@@ -144,12 +150,11 @@ body {
 
 .payTableBtn {
   display: inline-block;
-  border: 2px solid silver;
   background-color: silver;
   color: black;
   border-radius: 8px;
   font-size: 18px;
-  width: 120px;
+  width: 150px;
   height: 36px;
   font-family: "Lato", sans-serif;
   background: -moz-linear-gradient(
@@ -200,9 +205,17 @@ table {
   align-content: center;
   width: 80%;
   position: center;
-  margin: auto;
+  margin: 10% auto;
   background-color: white;
-  font-size: 18px;
+  padding: 20px;
+}
+
+th {
+  font-size: 21px;
+}
+
+td {
+  font-size: 20px;
 }
 
 th,
@@ -216,14 +229,15 @@ td {
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
   margin: auto;
-  padding: 20px 10px 20px 28px;
+  padding: 15px 15px 15px 15px;
   left: 0;
   right: 0;
-  top: 10%;
-  width: 50%; /* Full width */
+  top: 6%;
+  width: 60%;
   height: auto; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .close {
@@ -231,4 +245,11 @@ td {
   float: right;
   font-size: 28px;
   font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
