--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,24 @@
+html {
+  height: 100%;
+}
+
 body {
+  margin-top: auto;
   display: flex;
   flex-direction: column;
-  background: rgb(0, 153, 0);
-  background: linear-gradient(
-    0deg,
-    rgba(0, 153, 0, 1) 0%,
-    rgba(0, 204, 0, 1) 100%
-  );
+  background-image: linear-gradient(
+      to bottom,
+      rgba(0, 0, 0, 0.2),
+      rgba(104, 195, 163, 0.4)
+    ),
+    url("Images/Backgroundv2.jpg");
+
+  background-size: auto 100%;
   justify-content: center;
-  background-attachment: fixed;
+  background-repeat: no-repeat;
+  overflow: hidden;
+  resize: vertical;
+  background-position: bottom;
 }
 
 #header {
@@ -16,8 +26,9 @@ body {
   display: flex;
   justify-content: center;
   font-size: 64px;
-  margin: 5px 0 10px 0;
+  margin: 10px 0 10px 0;
   text-align: center;
+  color: white;
 }
 
 .gameStatusMessage {
@@ -28,6 +39,7 @@ body {
   margin: 10px;
   height: 48px;
   text-align: center;
+  color: white;
 }
 
 .suitCSS {
@@ -42,14 +54,16 @@ body {
   font-family: sans-serif;
 }
 
-.cardCSS {
-  margin: 10px 10px 0 10px;
-  padding: 10px;
+.filledCard {
+  width: 70px;
+  border: 1px dashed rgba(0, 0, 0, 0);
   background-color: white;
-  width: 50px;
-  text-align: center;
+  height: 89px;
+  margin: 10px 10px 10px 10px;
   border-radius: 8px;
-  display: inline-block;
+  display: flex inline-block;
+  flex-wrap: wrap;
+  text-align: center;
 }
 
 .holdIndicator {
@@ -58,7 +72,17 @@ body {
   vertical-align: super;
   justify-content: center;
   font-size: 20px;
-  height: 32px;
+  height: 48px;
+}
+
+.holdIndicatorBackground {
+  background: radial-gradient(
+    rgba(255, 255, 255, 0.8),
+    rgba(255, 255, 255, 0.1)
+  );
+  border-radius: 8px;
+  padding: 10px;
+  font-weight: bold;
 }
 
 .cardWithHoldIndicatorCSS {
@@ -71,8 +95,9 @@ body {
 .emptyCard {
   width: 70px;
   border: 1px dashed white;
+  background-color: grey;
   height: 89px;
-  margin: 10px 10px 30px 10px;
+  margin: 10px 10px 10px 10px;
   border-radius: 8px;
   display: flex;
   flex-wrap: wrap;
@@ -87,7 +112,7 @@ body {
   width: 70%;
   margin: auto;
   border-radius: 3px;
-  margin-bottom: 75px;
+  margin-bottom: 50px;
 }
 
 .red {
@@ -109,11 +134,11 @@ body {
   width: 100%;
   font-weight: bold;
   margin-bottom: 20px;
+  color: white;
 }
 
-.playerBtn {
+#actionBtn {
   display: inline-block;
-
   color: white;
   border-radius: 8px;
   font-size: 18px;
@@ -148,7 +173,7 @@ body {
   transition: all 0.3s linear;
 }
 
-.payTableBtn {
+#payTable {
   display: inline-block;
   background-color: silver;
   color: black;
@@ -229,14 +254,13 @@ td {
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
   margin: auto;
-  padding: 15px 15px 15px 15px;
+  padding: 0px 15px 15px 15px;
   left: 0;
   right: 0;
   top: 6%;
   width: 60%;
   height: auto; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
