--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,10 @@ body {
   text-align: center;
 }
 
+.filledCard:hover {
+  background-color: rgb(189, 189, 189);
+}
+
 .holdIndicator {
   display: flex;
   text-align: center;
@@ -80,6 +84,7 @@ body {
     rgba(255, 255, 255, 0.8),
     rgba(255, 255, 255, 0.1)
   );
+  height: 48px;
   border-radius: 8px;
   padding: 10px;
   font-weight: bold;
@@ -111,20 +116,37 @@ body {
   padding-bottom: 12px;
   width: 70%;
   margin: auto;
+  height: auto;
   border-radius: 3px;
-  margin-bottom: 50px;
+  margin-bottom: 10px;
+}
+
+@media only screen and (max-width: 400px) {
+  .cardsContainerCSS {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-top: 15px;
+    padding-bottom: 12px;
+    width: 100%;
+    margin-top: 5px;
+    height: auto;
+    border-radius: 3px;
+    margin-bottom: 10px;
+  }
+  .creditMessage {
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    width: 100%;
+    font-weight: bold;
+    color: white;
+    margin: 15px auto;
+  }
 }
 
 .red {
   color: red;
-}
-
-.bottomSection {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-  row-gap: 0px 50px;
 }
 
 .creditMessage {
@@ -135,6 +157,15 @@ body {
   font-weight: bold;
   margin-bottom: 20px;
   color: white;
+  margin: 20px auto;
+}
+
+.bottomSection {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  row-gap: 0px 50px;
 }
 
 #actionBtn {
@@ -262,6 +293,10 @@ td {
   height: auto; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.modal-title {
+  font-weight: bold;
 }
 
 .close {
